chore(build): use correct build command.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Build
         run: |
           yarn --frozen-lockfile
-          yarn build
+          yarn compile
       - name: Release
         if: github.ref == 'refs/heads/master'
         run: |
