--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"version": "0.0.0-managed-by-semantic-release",
 	"license": "MIT",
 	"publisher": "randymarsh77",
+	"repository": "https://github.com/randymarsh77/FaithlifeBuildTasks",
 	"engines": {
 		"vscode": "^1.45.0"
 	},
