chore(build): call vsce login before release.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
         if: github.ref == 'refs/heads/master'
         run: |
           npm i -g vsce
+          vsce login randymarsh77
           yarn semantic-release
         env:
           VSCE_PAT: ${{ secrets.VSCE_PAT }}
